# aitools

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: build-binaries.yml  ci.yml  release-main.yml  release.yml
scripts/: build-all.sh  check_version_policy.py  setup-dev.sh
skills/ait-core/: SKILL.md
skills/ait-gcal/: SKILL.md
skills/ait-gdrive/: SKILL.md
skills/ait-gmail/: SKILL.md
skills/ait-memory/: SKILL.md
skills/ait-resend/: SKILL.md
skills/ait-sendgrid/: SKILL.md
skills/ait-social/: SKILL.md
skills/ait-stripe/: SKILL.md
skills/ait-xai/: SKILL.md
src/ai_toolset/: __init__.py
tests/: conftest.py
tests/test_core/: test_api_key_store.py  test_formatter.py  test_google_auth.py  test_retry.py  test_settings.py  test_token_store.py
tests/test_gcal/: test_datetime.py  test_gcal_scopes.py
tests/test_gdrive/: test_size_parse.py
tests/test_gmail/: test_scopes.py
tests/test_memory/: test_importance.py
tests/test_resend/: test_resend_content.py
tests/test_sendgrid/: test_sendgrid_content.py
tests/test_social/: test_commands.py  test_factory.py
tests/test_stripe/: test_stripe_client.py
tests/test_xai/: test_chat_prompt.py
